Ajustes finais para Heitor Missions

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Missões do Heitor - Sistema Gamificado</title>
-    <meta name="description" content="Sistema gamificado de tarefas para crianças com tema super-heróico" />
+    <title>Heitor Missions - Sistema Gamificado</title>
+    <meta name="description" content="Sistema gamificado de missões para o Heitor com tema super-heróico do Flash" />
     <meta name="theme-color" content="#C8102E" />
   </head>
   <body>
