--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="https://img.icons8.com/?size=100&id=63647&format=png&color=000000" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Heitor Missions - Sistema Gamificado</title>
     <meta name="description" content="Sistema gamificado de missões para o Heitor com tema super-heróico do Flash" />
